// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SecondarySidebarItem > should render correctly when current is false 1`] = `
<div>
  <div>
    <p
      class="dark:text-grayScheme-400 dark:hover:text-white dark:hover:bg-grayScheme-900 group flex gap-x-3 rounded-md p-1 pl-3 text-sm font-semibold cursor-pointer leading-6"
    >
      item
    </p>
  </div>
</div>
`;

exports[`SecondarySidebarItem > should render correctly when current is true 1`] = `
<div>
  <div>
    <p
      class="bg-grayScheme-50 dark:bg-grayScheme-900 text-emerald-600 dark:text-white group flex gap-x-3 rounded-md p-1 pl-3 text-sm font-semibold cursor-pointer leading-6"
    >
      item
    </p>
  </div>
</div>
`;
